# rust-api-ddd

./: .env.example  .gitignore  Cargo.toml  README.md  audit_log_other_routes.patch  build.rs  my_changes.patch
config/: config.local.yaml  config.yaml
databases/postgresql/: run.sh
databases/postgresql/migrations/: 000001_create_extensions.down.sql  000001_create_extensions.up.sql  000002_create_users.up.sql  000003_create_roles.down.sql  000003_create_roles.up.sql  000004_create_user_roles.down.sql  000004_create_user_roles.up.sql  000005_create_permissions.up.sql  000006_create_password_reset_tokens.up.sql  000007_create_refresh_tokens.up.sql  000008_create_log_audit_auths.down.sql  000008_create_log_audit_auths.up.sql  000008_create_user_login_logs.down.sql  000008_create_user_login_logs.up.sql  000009_create_system_settings.up.sql  000011_create_menus.up.sql  000012_create_menu_permissions.down.sql  000012_create_menu_permissions.up.sql  000013_add_updated_at_trigger_menus.down.sql  000013_add_updated_at_trigger_menus.up.sql  000014_create_user_settings.up.sql  000015_create_activity_logs.up.sql  000015_create_log_activities.down.sql  000015_create_log_activities.up.sql  (+13 more)
examples/: hash_password.rs
logs/: application.log.2026-07-11  application.log.2026-07-12
migrations/: 20260719000000_create_user_password_histories.up.sql
src/: lib.rs  main.rs  routes.rs
src/bootstrap/: config.rs  database.rs  migration.rs  mod.rs  redis.rs  router.rs  state.rs  state.rs.rej
src/modules/: mod.rs
src/shared/: authz_cache.rs  context.rs  mod.rs
(+253 files in other folders)
