[package]
name = "rust-clean-ddd"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = [
  "trace",
  "cors",
  "catch-panic",
  "timeout",
] }

# db
sqlx = { version = "0.9", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
  "uuid",
  "migrate",
] }

# redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# serde / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
config = "0.14"
dotenvy = "0.15"

# auth / security
jsonwebtoken = "9"
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"

# ids / time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"

# validation
validator = { version = "0.18", features = ["derive"] }

# error handling
thiserror = "1"
anyhow = "1"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# misc
async-trait = "0.1"

# file storage
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2"
